tests/ui/parser/issue-116781.rs
#[derive(Debug)]
struct Foo {
    #[cfg(all())]
    field: fn(($),), //~ ERROR expected pattern, found `$`
    //~^ ERROR expected pattern, found `$`
}

fn main() {}
